Adição do Rodapé, troca de imagens

--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <!-- Básico -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- SEO principal -->
-  <title>AssociArte Marketplace</title>
-  <meta name="description"
+    <!-- Básico -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- SEO principal -->
+    <title>AssociArte Marketplace</title>
+    <meta name="description"
         content="AssociArte Marketplace é um mercado digital de produtos artesanais e sustentáveis, conectando a associação a consumidores conscientes.">
-  <meta name="author" content="Victor Manoel">
-  <meta name="robots" content="index, follow">
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
-  <meta property="og:title" content="AssociArte Marketplace">
-  <meta property="og:description"
+    <meta name="author" content="Victor Manoel">
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:title" content="AssociArte Marketplace">
+    <meta property="og:description"
         content="Marketplace de produtos artesanais, sustentáveis e regionais da associação AssociArte.">
-  <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
-  <meta property="og:url" content="https://associarte-marketplace.vercel.app/">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="pt_BR">
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="AssociArte Marketplace">
-  <meta name="twitter:description"
-        content="Produtos artesanais e sustentáveis vendidos pela associação AssociArte.">
-  <meta name="twitter:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
-  <!-- Fontes e ícones -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- CSS base -->
-  <link rel="stylesheet" href="./assets/css/base/variaveis.css">
-  <link rel="stylesheet" href="./assets/css/base/base.css">
-  <!-- Componentes -->
-  <link rel="stylesheet" href="./assets/css/componentes/botoes.css">
-  <link rel="stylesheet" href="./assets/css/componentes/carrinho.css">
-  <link rel="stylesheet" href="./assets/css/componentes/feedback.css">
-  <link rel="stylesheet" href="./assets/css/paginas/produtos.css">
-  <!-- Página -->
-  <link rel="stylesheet" href="./assets/css/paginas/home.css">
+    <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
+    <meta property="og:url" content="https://associarte-marketplace.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pt_BR">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AssociArte Marketplace">
+    <meta name="twitter:description" content="Produtos artesanais e sustentáveis vendidos pela associação AssociArte.">
+    <meta name="twitter:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
+    <!-- Favicon -->
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <!-- Fontes e ícones -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- CSS base -->
+    <link rel="stylesheet" href="./assets/css/base/variaveis.css">
+    <link rel="stylesheet" href="./assets/css/base/base.css">
+    <!-- Componentes -->
+    <link rel="stylesheet" href="./assets/css/componentes/botoes.css">
+    <link rel="stylesheet" href="./assets/css/componentes/carrinho.css">
+    <link rel="stylesheet" href="./assets/css/componentes/feedback.css">
+    <link rel="stylesheet" href="./assets/css/componentes/rodape.css">
+    <!-- Página -->
+    <link rel="stylesheet" href="./assets/css/paginas/produtos.css">
+    <link rel="stylesheet" href="./assets/css/paginas/home.css">
 </head>
 
 <body>
@@ -118,16 +119,20 @@
             <h2 class="titulo">Nossas Categorias</h2>
             <div class="linha">
                 <article class="col-3">
-                    <h3>Higiene Pessoal</h3>
-                    <img src="../assets/img/categoria-1.jpg" alt="Produtos de higiene sustentáveis">
+                    <h3>Artesanato</h3>
+                    <img src="../assets/img/categoria-artesanato.png" alt="Produtos de Artesanato">
                 </article>
                 <article class="col-3">
-                    <h3>Moda Sustentável</h3>
-                    <img src="../assets/img/categoria-2.jpg" alt="Moda ecológica">
+                    <h3>Gastronomia</h3>
+                    <img src="../assets/img/categoria-gastronomia.png" alt="Produtos de gastronomia">
                 </article>
                 <article class="col-3">
-                    <h3>Decoração Ecológica</h3>
-                    <img src="../assets/img/categoria-3.jpg" alt="Decoração sustentável">
+                    <h3>Decoração</h3>
+                    <img src="../assets/img/categoria-decoracao.jpg" alt="Produtos de Decoração">
+                </article>
+                <article class="col-3">
+                    <h3>Moda</h3>
+                    <img src="../assets/img/categoria-moda.png" alt="Produto de Moda">
                 </article>
             </div>
         </div>
@@ -145,17 +150,40 @@
 
     <!-- RODAPÉ -->
     <footer class="rodape">
-        <div class="corpo-categorias">
-            <div class="linha">
-                <div class="col-2">
-                    <h1>Escolha um novo <br> estilo de vida!</h1>
-                    <p>Quem ama preserva, preservar o meio <br> ambiente é preservar a vida</p> <br>
-                    <a href="../paginas/informacoes.html" class="btn">Mais Informações &#8594;</a>
-                </div>
-                <div class="col-2">
-                    <img src="../assets/img/lixeiras.png" alt="">
-                </div>
-            </div>
+        <div class="rodape-container">
+            <section class="rodape-col">
+                <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+                <p>
+                    A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
+                    dedicada à valorização do artesanato local, fortalecimento da cultura regional
+                    e geração de renda.
+                </p>
+                <p class="rodape-institucional">
+                    Plataforma oficial de vendas da <strong>ASSOCIARTE</strong><br>
+                    Associação dos Artesãos e Artistas de Santa Maria da Vitória – BA
+                </p>
+            </section>
+            <section class="rodape-col">
+                <h4>Contato</h4>
+                <address>
+                    <p>📍 Praça Major José Borba, Centro<br>Santa Maria da Vitória – BA</p>
+                    <p>
+                        ✉ <a href="mailto:associarte.smv.cultura@gmail.com">
+                            associarte.smv.cultura@gmail.com
+                        </a>
+                    </p>
+                </address>
+            </section>
+            <section class="rodape-col">
+                <h4>Redes sociais</h4>
+                <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
+                    aria-label="Instagram da Associação AssociArte">
+                    <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
+                </a>
+            </section>
+        </div>
+        <div class="rodape-copy">
+            © 2026 ASSOCIARTE — Desenvolvido por Victor Manoel
         </div>
     </footer>
 
