--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -70,7 +70,6 @@
             <option value="artesanal">Artesanato</option>
             <option value="natural">Beleza Natural</option>
             <option value="moda">Moda</option>
-            <option value="higiene">Higiene Pessoal</option>
             <option value="decoracao">Decoração</option>
             <option value="kit">Kits e Presentes</option>
             <option value="outro">Outro</option>
@@ -84,7 +83,7 @@
           <label for="imagem-produto">Imagem do Produto <span class="obrigatorio">*</span></label>
           <input type="file" id="imagem-produto" name="imagem" accept="image/*" required aria-required="true"
             aria-describedby="imagemHelp">
-          <small id="imagemHelp">Aceitamos imagens nos formatos JPG, PNG ou GIF.</small>
+          <small id="imagemHelp">Aceitamos imagens nos formatos JPG, PNG.</small>
         </div>
         <div id="preview-fotos" class="preview-fotos"></div>
       </div>
