--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -29,13 +29,14 @@
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Básico -->
-  <link rel="stylesheet" href="../assets/css/base/variaveis.css"/>
-  <link rel="stylesheet" href="../assets/css/base/base.css"/>
+  <link rel="stylesheet" href="../assets/css/base/variaveis.css" />
+  <link rel="stylesheet" href="../assets/css/base/base.css" />
   <!-- Componentes -->
   <link rel="stylesheet" href="../assets/css/componentes/carrinho.css">
   <link rel="stylesheet" href="../assets/css/componentes/modal.css">
   <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
   <link rel="stylesheet" href="../assets/css/componentes/header.css">
+  <link rel="stylesheet" href="../assets/css/componentes/rodape.css">
   <link rel="stylesheet" href="../assets/css/componentes/botoes.css">
   <!-- Página -->
   <link rel="stylesheet" href="../assets/css/paginas/produtos.css">
@@ -130,7 +131,8 @@
         <div class="form-group">
           <label for="foto-perfil-input">Foto de Perfil</label>
           <div class="foto-perfil-preview-container">
-            <img id="foto-perfil-preview" src="/assets/img/placeholder-perfil.png" alt="Pré-visualização da foto de perfil">
+            <img id="foto-perfil-preview" src="/assets/img/placeholder-perfil.png"
+              alt="Pré-visualização da foto de perfil">
           </div>
           <input type="file" id="foto-perfil-input" accept="image/png, image/jpeg">
           <small>Use uma imagem quadrada para melhores resultados.</small>
@@ -178,6 +180,44 @@
       </div>
     </section>
   </main>
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <div class="rodape-container">
+      <section class="rodape-col">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <p>
+          A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
+          dedicada à valorização do artesanato local, fortalecimento da cultura regional
+          e geração de renda.
+        </p>
+        <p class="rodape-institucional">
+          Plataforma oficial de vendas da <strong>ASSOCIARTE</strong><br>
+          Associação dos Artesãos e Artistas de Santa Maria da Vitória – BA
+        </p>
+      </section>
+      <section class="rodape-col">
+        <h4>Contato</h4>
+        <address>
+          <p>📍 Praça Major José Borba, Centro<br>Santa Maria da Vitória – BA</p>
+          <p>
+            ✉ <a href="mailto:associarte.smv.cultura@gmail.com">
+              associarte.smv.cultura@gmail.com
+            </a>
+          </p>
+        </address>
+      </section>
+      <section class="rodape-col">
+        <h4>Redes sociais</h4>
+        <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
+          aria-label="Instagram da Associação AssociArte">
+          <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
+        </a>
+      </section>
+    </div>
+    <div class="rodape-copy">
+      © 2026 ASSOCIARTE — Desenvolvido por Victor Manoel
+    </div>
+  </footer>
 
   <!-- MODAL DE EXCLUSÃO -->
   <div id="modal-excluir-conta" class="modal hidden">
