--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="../assets/css/componentes/header.css">
   <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
   <link rel="stylesheet" href="../assets/css/componentes/carrinho.css">
+  <link rel="stylesheet" href="../assets/css/componentes/rodape.css">
   <!-- Página -->
   <link rel="stylesheet" href="../assets/css/paginas/pedidos.css" />
 </head>
@@ -79,6 +80,44 @@
       </div>
     </section>
   </main>
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <div class="rodape-container">
+      <section class="rodape-col">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <p>
+          A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
+          dedicada à valorização do artesanato local, fortalecimento da cultura regional
+          e geração de renda.
+        </p>
+        <p class="rodape-institucional">
+          Plataforma oficial de vendas da <strong>ASSOCIARTE</strong><br>
+          Associação dos Artesãos e Artistas de Santa Maria da Vitória – BA
+        </p>
+      </section>
+      <section class="rodape-col">
+        <h4>Contato</h4>
+        <address>
+          <p>📍 Praça Major José Borba, Centro<br>Santa Maria da Vitória – BA</p>
+          <p>
+            ✉ <a href="mailto:associarte.smv.cultura@gmail.com">
+              associarte.smv.cultura@gmail.com
+            </a>
+          </p>
+        </address>
+      </section>
+      <section class="rodape-col">
+        <h4>Redes sociais</h4>
+        <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
+          aria-label="Instagram da Associação AssociArte">
+          <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
+        </a>
+      </section>
+    </div>
+    <div class="rodape-copy">
+      © 2026 ASSOCIARTE — Desenvolvido por Victor Manoel
+    </div>
+  </footer>
 
   <!-- MODAL DE CANCELAMENTO -->
   <div id="cancelModal" class="modal hidden">
