--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -5,13 +5,12 @@
   <!-- SEO principal -->
   <title>Produtos | AssociArte Marketplace</title>
   <meta name="description"
-        content="Explore os produtos artesanais e sustentáveis disponíveis no AssociArte Marketplace.">
+    content="Explore os produtos artesanais e sustentáveis disponíveis no AssociArte Marketplace.">
   <meta name="author" content="AssociArte Marketplace">
   <meta name="robots" content="index, follow">
   <!-- Open Graph -->
   <meta property="og:title" content="Produtos | AssociArte Marketplace">
-  <meta property="og:description"
-        content="Produtos artesanais e sustentáveis da associação AssociArte.">
+  <meta property="og:description" content="Produtos artesanais e sustentáveis da associação AssociArte.">
   <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
   <meta property="og:url" content="https://associarte-marketplace.vercel.app/paginas/produtos.html">
   <meta property="og:type" content="website">
@@ -26,6 +25,7 @@
   <link rel="stylesheet" href="../assets/css/componentes/carrinho.css">
   <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
   <link rel="stylesheet" href="../assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="../assets/css/componentes/rodape.css">
   <!-- Página -->
   <link rel="stylesheet" href="../assets/css/paginas/produtos.css">
 </head>
@@ -104,7 +104,6 @@
           <option value="artesanal">Artesanato</option>
           <option value="natural">Beleza Natural</option>
           <option value="moda">Moda</option>
-          <option value="higiene">Higiene Pessoal</option>
           <option value="decoracao">Decoração</option>
           <option value="kit">Kits e Presentes</option>
           <option value="outro">Outros</option>
@@ -117,6 +116,43 @@
       <!-- Produtos serão renderizados aqui pelo produtos.js -->
     </div>
   </main>
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    <div class="rodape-container">
+      <section class="rodape-col">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <p>
+          A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
+          dedicada à valorização do artesanato local, fortalecimento da cultura regional
+          e geração de renda.
+        </p>
+        <p class="rodape-institucional">
+          Plataforma oficial de vendas da <strong>ASSOCIARTE</strong>
+        </p>
+      </section>
+      <section class="rodape-col">
+        <h4>Contato</h4>
+        <address>
+          <p>📍 Praça Major José Borba, Centro<br>Santa Maria da Vitória – BA</p>
+          <p>
+            ✉ <a href="mailto:associarte.smv.cultura@gmail.com">
+              associarte.smv.cultura@gmail.com
+            </a>
+          </p>
+        </address>
+      </section>
+      <section class="rodape-col">
+        <h4>Redes sociais</h4>
+        <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
+          aria-label="Instagram da Associação AssociArte">
+          <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
+        </a>
+      </section>
+    </div>
+    <div class="rodape-copy">
+      © 2026 ASSOCIARTE — Desenvolvido por Victor Manoel
+    </div>
+  </footer>
 
   <!-- SCRIPTS -->
   <script src="../assets/js/vercel-analytics.js"></script>
