--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="../assets/css/componentes/header.css">
   <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
   <link rel="stylesheet" href="../assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="../assets/css/componentes/rodape.css">
   <!-- Página -->
   <link rel="stylesheet" href="../assets/css/paginas/registro.css">
 </head>
@@ -76,6 +77,11 @@
       </form>
     </section>
   </main>
+  <footer class="rodape-minimo">
+    <p>
+      © 2026 ASSOCIARTE · Plataforma oficial da associação
+    </p>
+  </footer>
 
   <!-- SCRIPTS -->
   <script src="../assets/js/vercel-analytics.js"></script>
